--- a/sea.html
+++ b/sea.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <body>
-    <h2>ihotou wave</h2>
+    <h2>Ihotewoo wave</h2>
     <div class="container">
       <div class="sun"></div>
       <div class="wave1"></div>
