--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
   <div class="about-title">
     <h1>About</h1>
-    <p>I went on a trip to Jeju Island with my family. I had a great time, so I decided to start a simple project about the trip.<br>I used HTML and CSS to make each topic which represents my initial impression of the island.  <br>Please enjoy.</p>
+    <p>I went on a trip to Jeju Island with my family. I had a great time, so I decided to start a simple project about the trip.<br>Each topic represents the inital impression of the island, and I used HTML and CSS only.  <br>Please enjoy.</p>
     <div class="about-name">Soohong Ahn</div>
 
     <div class="about-note">
