--- a/sea.html
+++ b/sea.html
@@ -8,7 +8,9 @@
   <body>
     <h2>Ihotewoo wave</h2>
     <div class="container">
-      <div class="sun"></div>
+      <div class="sunrise">
+        <div class="sun"></div>
+      </div>
       <div class="wave1"></div>
       <div class="wave2"></div>
       <div class="wave3"></div>
