--- a/building.html
+++ b/building.html
@@ -8,20 +8,40 @@
   <body>
     <h2>Central City Hotel</h2>
     <div class="street">
-      <div class="building1">
-        <div id="window" class="window1"></div>
+      <div id="building" class="building1">
+        <div id="window" class="window1" style="animation: blink 1s infinite alternate;"></div>
+        <div id="window" class="window1" style="animation: blink 4s infinite alternate;"></div>
       </div>
-      <div class="building2">
+      <div id="building" class="building2">
         <div id="window" class="window2"></div>
+        <div id="window" class="window2" style="animation: blink 8s infinite alternate;"></div>
+        <div id="window" class="window2" style="animation: blink 5s infinite alternate;"></div>
+        <div id="window" class="window2" style="animation: blink 1.2s infinite alternate;"></div>
+        <div id="window" class="window2"></div>
+        <div id="window" class="window2" style="animation: blink 8s infinite alternate;"></div>
+        <div id="window" class="window2"></div>
+        <div id="window" class="window2" style="animation: blink 9s infinite alternate;"></div>
       </div>
-      <div class="building3">
+      <div id="building" class="building3">
+        <div id="window" class="window3" style="animation: blink 2s infinite alternate;"></div>
         <div id="window" class="window3"></div>
+        <div id="window" class="window3" style="animation: blink 6s infinite alternate;"></div>
       </div>
-      <div class="building4">
+      <div id="building" class="building4">
+        <div id="window" class="window4" style="animation: blink 3s infinite alternate;"></div>
+        <div id="window" class="window4" style="animation: blink 5s infinite alternate;"></div>
         <div id="window" class="window4"></div>
+        <div id="window" class="window4"></div>
+        <div id="window" class="window4" style="animation: blink 6s infinite alternate;"></div>
+        <div id="window" class="window4" style="animation: blink 2s infinite alternate;"></div>
       </div>
-      <div class="building5">
+      <div id="building" class="building5">
+        <div id="window" class="window5" style="animation: blink 6s infinite alternate;"></div>
+        <div id="window" class="window5" style="animation: blink 3s infinite alternate;"></div>
+        <div id="window" class="window5" style="animation: blink 4.4s infinite alternate;"></div>
         <div id="window" class="window5"></div>
+        <div id="window" class="window5"></div>
+        <div id="window" class="window5" style="animation: blink 3.2s infinite alternate;"></div>
       </div>
 
     </div>
